log.txt
evalmachine.<anonymous>:21
				this.__defineGetter__(v.item, function() { console.log(itemx, ); return itemx.find(v => v.id === this[v.item + "Id"]); });
				                                                              ^
SyntaxError: Unexpected token )
    at createScript (vm.js:56:10)
    at Object.runInThisContext (vm.js:97:10)
    at Object.<anonymous> (F:\Nodejs\PixelLife\index.js:83:4)
    at Module._compile (module.js:570:32)
    at Object.Module._extensions..js (module.js:579:10)
    at Module.load (module.js:487:32)
    at tryModuleLoad (module.js:446:12)
    at Function.Module._load (module.js:438:3)
    at Module.runMain (module.js:604:10)
    at run (bootstrap_node.js:390:7)